Bizfi Production/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>McaApp__SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>McaApp__SSN_2__c</fullName>
        <label>SSN # (2)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__SSN__c</fullName>
        <label>SSN #</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Square_Footage__c</fullName>
        <label>Square Footage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Time_Left_On_Lease__c</fullName>
        <label>Time Left On Lease</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Type_of_Entity__c</fullName>
        <label>Type of Entity</label>
        <picklist>
            <picklistValues>
                <fullName>Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Liability Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Liability Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sole Proprietor</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>McaApp__UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>McaApp__Use_of_Proceeds__c</fullName>
        <label>Use of Proceeds</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the User Id of sales Rep</description>
        <inlineHelpText>Holds the User Id of sales Rep</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>McaApp__Years_in_Business__c</fullName>
        <label>Years in Business</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__of_Avg_CC_Used__c</fullName>
        <formula>(MAX( McaApp__Advance_Amount_Option_A__c , McaApp__Advance_Amount_Option_B__c , McaApp__Advance_Option_C__c, McaApp__Advance_Option_D__c))/ McaApp__Avg_Used_New__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval % of Avg CC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_Contracts_In__c</fullName>
        <label>New - Contracts In</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Contracts_Out__c</fullName>
        <label>New - Contracts Out</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Current_Bonus__c</fullName>
        <label>New - Current Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Current_Booking_Rate__c</fullName>
        <label>New - Current Booking Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_Current_Payout__c</fullName>
        <label>New - Current Payout %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_Current_Total_Funding__c</fullName>
        <label>New - Current Total Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Next_Tier_Difference__c</fullName>
        <label>New - Next Tier Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Next_Tier_Min_Bonus__c</fullName>
        <formula>New_Next_Tier_Min_Volume__c *  New_Next_Tier_Payout__c</formula>
        <label>New - Next Tier Min Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Next_Tier_Min_Volume__c</fullName>
        <label>New - Next Tier Min Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Next_Tier_Payout__c</fullName>
        <label>New - Next Tier Payout %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_Potential_Bonus__c</fullName>
        <label>New - Potential Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Potential_Payout__c</fullName>
        <label>New - Potential Payout %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_Potential_Total_Funding__c</fullName>
        <label>New - Potential Total Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_of_Employees_Range__c</fullName>
        <label>No. of Employees (Range)</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OLDID__c</fullName>
        <externalId>true</externalId>
        <label>OLDID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage_Category__c</fullName>
        <label>Opportunity Stage Category</label>
        <picklist>
            <picklistValues>
                <fullName>Apped Opp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted Opp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracted Opp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funded Opp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dead Opp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Opp</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Original_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Paid_Off_Time__c</fullName>
        <label>Paid Off Time</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Agent who manages the relationship with this referral partner</inlineHelpText>
        <label>Referring Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewals_Contracts_In__c</fullName>
        <label>Renewals - Contracts In</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewals_Contracts_Out__c</fullName>
        <label>Renewals - Contracts Out</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewals_Current_Bonus__c</fullName>
        <label>Renewals - Current Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewals_Current_Booking_Rate__c</fullName>
        <label>Renewals - Current Booking Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Renewals_Current_Payout__c</fullName>
        <label>Renewals - Current Payout %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Renewals_Current_Total_Funding__c</fullName>
        <label>Renewals - Current Total Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewals_Next_Tier_Difference__c</fullName>
        <label>Renewals - Next Tier Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewals_Next_Tier_Min_Bonus__c</fullName>
        <formula>Renewals_Next_Tier_Min_Volume__c *  Renewals_Next_Tier_Payout__c</formula>
        <label>Renewals - Next Tier Min Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewals_Next_Tier_Min_Volume__c</fullName>
        <label>Renewals - Next Tier Min Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewals_Next_Tier_Payout__c</fullName>
        <label>Renewals - Next Tier Payout %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Renewals_Potential_Bonus__c</fullName>
        <label>Renewals - Potential Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewals_Potential_Payout__c</fullName>
        <label>Renewals - Potential Payout %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Renewals_Potential_Total_Funding__c</fullName>
        <label>Renewals - Potential Total Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Restricted_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restricted Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_of_Incorporation__c</fullName>
        <label>State of Incorporation</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District Of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Dials__c</fullName>
        <formula>Legacy_Dials__c +  qbdialer__Dials__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Under_10500__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Under $10.5K</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <formula>McaApp__User__r.UserRole.Name</formula>
        <label>User Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X5LINX_Rep_RIN__c</fullName>
        <label>5LINX Rep RIN</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__CloseDate__c</fullName>
        <description>This field stores when the InsideSales.com NeuralView Close Score was last updated</description>
        <label>NeuralView: Close Score Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__CloseScore__c</fullName>
        <description>This field stores the InsideSales.com NeuralView Close Score</description>
        <label>NeuralView: Close Score</label>
        <precision>9</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__Dials__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The field should not be modified by users, it is intended for use in the filters of the Seek Initiatives.  Any manual changes will be overwritten.</description>
        <label>Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__LastCallTime__c</fullName>
        <description>The field should not be modified by users, it is intended for use in the filters of the Seek Initiatives.  Any manual changes will be overwritten.</description>
        <label>Last Call Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__Related_Contact_Dials__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The field should not be modified by users, it is intended for use in the filters of the Seek Initiatives.  Any manual changes will be overwritten.</description>
        <label>Related Contact Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__Related_Contact_LastCallTime__c</fullName>
        <description>The field should not be modified by users, it is intended for use in the filters of the Seek Initiatives.  Any manual changes will be overwritten.</description>
        <label>Related Contact Last Call Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__ResponseTime__c</fullName>
        <description>This field will store the number of seconds between record creation time and first call time (via the PowerDialer).</description>
        <label>Response Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__TimeZoneSidKey__c</fullName>
        <description>This field will store the TimeZoneSidKey for the Account.</description>
        <label>TimeZone Sid Key</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <historyRetentionPolicy>
        <archiveAfterMonths>18</archiveAfterMonths>
        <archiveRetentionYears>10</archiveRetentionYears>
        <description>Accounts History</description>
        <gracePeriodDays>1</gracePeriodDays>
    </historyRetentionPolicy>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Duplicate_Not_Owned_by_Storage</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>stor,hous</value>
        </filters>
        <filters>
            <field>Opportunity_Stage_Category__c</field>
            <operation>equals</operation>
            <value>Duplicate Opp</value>
        </filters>
        <filters>
            <field>Funded_Opp__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Duplicate - Not Owned by Storage</label>
        <language>en_US</language>
        <sharedTo>
            <group>Sys_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>External_ISO_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>External</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.McaApp__ISO</value>
        </filters>
        <label>External ISO Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <group>Sales_Management</group>
            <group>Sys_Admins</group>
            <role>Accounting</role>
            <role>Commissions_Admin</role>
            <role>Customer_Service</role>
            <role>Operations_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>McaApp__Banks</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.McaApp__Bank</value>
        </filters>
        <label>Banks</label>
        <language>en_US</language>
        <sharedTo>
            <group>Bizfi_Only</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>McaApp__ISOs</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>McaApp__User__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.McaApp__ISO</value>
        </filters>
        <label>ISOs</label>
        <language>en_US</language>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Over_60_Days</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Under_10500__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Paid_Off_Time__c</field>
            <operation>equals</operation>
            <value>Over 60 Days</value>
        </filters>
        <label>100% Over 60 Days</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Renewals_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Profit_Stars_Lending_FIs_ISOs</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>BDM__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>McaApp__Email__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PARENT_NAME</field>
            <operation>equals</operation>
            <value>Profitstars</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.McaApp__ISO</value>
        </filters>
        <label>Profit Stars Lending FIs ISOs</label>
        <language>en_US</language>
        <sharedTo>
            <group>Sys_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Under_60_Days</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Under_10500__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Paid_Off_Time__c</field>
            <operation>equals</operation>
            <value>Under 60 Days</value>
        </filters>
        <label>100% Under 60 Days</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Renewals_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X0_Paid_Off_My_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Under_10500__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Paid_Off_Time__c</field>
            <operation>equals</operation>
            <value>0%</value>
        </filters>
        <label>0% Paid Off My Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Renewals_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X20_Paid_Off_My_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Under_10500__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Paid_Off_Time__c</field>
            <operation>equals</operation>
            <value>20%</value>
        </filters>
        <label>20% Paid Off My Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Renewals_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X20_Paid_Off_My_Accounts_JL</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Under_10500__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>Opportunity_Stage_Category__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Paid_Off_Time__c</field>
            <operation>equals</operation>
            <value>20%</value>
        </filters>
        <label>20% Paid Off My Accounts JL</label>
        <language>en_US</language>
        <sharedTo>
            <group>Sys_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X40_Paid_Off_My_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Under_10500__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Paid_Off_Time__c</field>
            <operation>equals</operation>
            <value>40%</value>
        </filters>
        <label>40% Paid Off My Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Renewals_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X60_Paid_Off_My_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Under_10500__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Paid_Off_Time__c</field>
            <operation>equals</operation>
            <value>60%</value>
        </filters>
        <label>60% Paid Off My Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Renewals_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>McaApp__Bank</fullName>
        <active>true</active>
        <label>Bank</label>
    </recordTypes>
    <recordTypes>
        <fullName>McaApp__ISO</fullName>
        <active>true</active>
        <label>ISO</label>
    </recordTypes>
    <recordTypes>
        <fullName>McaApp__Merchant</fullName>
        <active>true</active>
        <label>Merchant</label>
    </recordTypes>
    <recordTypes>
        <fullName>McaApp__Vendor</fullName>
        <active>true</active>
        <label>Vendor</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Account_Name</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISCHANGED( Name ) , NOT ( $User.ProfileId = &apos;00eo000000120i0&apos; ) ,  RecordType.DeveloperName = &quot;Bank&quot; )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You are not authorized to edit this field.  Please contact your system administrator for assistance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Format_Bank_Phone</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
OR( $User.ProfileId = &apos;00eo0000000f8OO&apos;, $User.ProfileId = &apos;00eo000000120i0&apos;)) 

&amp;&amp; 

NOT( 
OR(ISBLANK(McaApp__Bank_Phone__c), REGEX(McaApp__Bank_Phone__c, &quot;^(\\+\\d{1,2}\\s)?\\(?\\d{3}\\)?[\\s.-]?\\d{3}[\\s.-]?\\d{4}$&quot;)))</errorConditionFormula>
        <errorDisplayField>McaApp__Bank_Phone__c</errorDisplayField>
        <errorMessage>Please enter bank phone in proper format or leave blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Format_Business_2_Number</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
OR( $User.ProfileId = &apos;00eo0000000f8OO&apos;, $User.ProfileId = &apos;00eo000000120i0&apos;)) 

&amp;&amp; 

NOT( 
OR(ISBLANK(Business_Phone_2__c), REGEX(Business_Phone_2__c, &quot;^(\\+\\d{1,2}\\s)?\\(?\\d{3}\\)?[\\s.-]?\\d{3}[\\s.-]?\\d{4}$&quot;)))</errorConditionFormula>
        <errorDisplayField>Business_Phone_2__c</errorDisplayField>
        <errorMessage>Business phone must be in proper format or be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Format_Business_3_Number</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
OR( $User.ProfileId = &apos;00eo0000000f8OO&apos;, $User.ProfileId = &apos;00eo000000120i0&apos;)) 

&amp;&amp; 

NOT( 
OR(ISBLANK(Business_Phone_3__c), REGEX(Business_Phone_3__c, &quot;^(\\+\\d{1,2}\\s)?\\(?\\d{3}\\)?[\\s.-]?\\d{3}[\\s.-]?\\d{4}$&quot;)))</errorConditionFormula>
        <errorDisplayField>Business_Phone_3__c</errorDisplayField>
        <errorMessage>Business phone must be in proper format or be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Format_Business_Number</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
OR( $User.ProfileId = &apos;00eo0000000f8OO&apos;, $User.ProfileId = &apos;00eo000000120i0&apos;)) 

&amp;&amp; 

NOT( 
OR(ISBLANK(McaApp__Business_Phone__c), REGEX(McaApp__Business_Phone__c, &quot;^(\\+\\d{1,2}\\s)?\\(?\\d{3}\\)?[\\s.-]?\\d{3}[\\s.-]?\\d{4}$&quot;)))</errorConditionFormula>
        <errorDisplayField>McaApp__Business_Phone__c</errorDisplayField>
        <errorMessage>Business phone must be in proper format or be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Format_Celular_Number</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
OR( $User.ProfileId = &apos;00eo0000000f8OO&apos;, $User.ProfileId = &apos;00eo000000120i0&apos;)) 

&amp;&amp; 

NOT( 
OR(ISBLANK(McaApp__Cellular_No__c), REGEX(McaApp__Cellular_No__c, &quot;^(\\+\\d{1,2}\\s)?\\(?\\d{3}\\)?[\\s.-]?\\d{3}[\\s.-]?\\d{4}$&quot;)))</errorConditionFormula>
        <errorDisplayField>McaApp__Cellular_No__c</errorDisplayField>
        <errorMessage>Cellular phone must be in proper format or be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Format_Landlord_Number</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
OR( $User.ProfileId = &apos;00eo0000000f8OO&apos;, $User.ProfileId = &apos;00eo000000120i0&apos;)) 

&amp;&amp; 

NOT( 
OR(ISBLANK(McaApp__Landlord_Phone__c), REGEX(McaApp__Landlord_Phone__c, &quot;^(\\+\\d{1,2}\\s)?\\(?\\d{3}\\)?[\\s.-]?\\d{3}[\\s.-]?\\d{4}$&quot;)))</errorConditionFormula>
        <errorDisplayField>McaApp__Landlord_Phone__c</errorDisplayField>
        <errorMessage>Landlord phone must be in proper format or be blank</errorMessage>
    </validationRules>
</CustomObject>